# streamai-mc

./: Cargo.toml  streamai.db
bot-worker/: README.md  index.ts  package.json  stream.ts
bot-worker/canvas-stub/: index.js  package.json
bot-worker/lib/: mcdata.js  settings.js  skills.js
config/personalities/: kira.txt  mochi.txt  rex.txt  sage.txt  volt.txt
src/: main.rs
src/ai/: mod.rs
src/bot/: mod.rs
src/dashboard/: mod.rs
src/db/: mod.rs
src/stream/: mod.rs
static/: index.html
